--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<!-- CSS only -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-		<title>Document</title>
+		<title>Greenstore</title>
 </head>
 
 <style>
@@ -140,7 +139,7 @@
         <div class="row p-lg-5 p-sm-0 mb-0">
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-1.jpg">
+                    <img class="card-img-top mx-auto" src="/resources/plant-1.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Birdnest Japanese</h4>
@@ -151,7 +150,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-2.jpg">
+                    <img class="card-img-top mx-auto" src="/resources/plant-2.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Monstera Deliciosa</h4>
@@ -162,7 +161,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-3.jpg">
+                    <img class="card-img-top mx-auto" src="/resources/plant-3.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                       <h4 class="card-title">Hoya Obovatum</h4>
@@ -175,7 +174,7 @@
         <div class="row p-lg-5 p-sm-0 mt-0">
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-4.jpg">
+                    <img class="card-img-top mx-auto" src="/resources/plant-4.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                       <h4 class="card-title">Zz plants</h4>
@@ -186,7 +185,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-5.jpg">
+                    <img class="card-img-top mx-auto" src="/resources/plant-5.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Birds 0f Paradise</h4>
@@ -197,7 +196,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-6.jpg">
+                    <img class="card-img-top mx-auto" src="/resources/plant-6.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Carathea Beauty Star</h4>
@@ -216,7 +215,7 @@
         <h6 style="text-decoration: underline;">OUR STORY:</h6>
         <h2 class="text-lg-center">For People Who Love Plants</h2>
         <p class="text-light">Eos ipsa fuga et numquam voluptatem voluptate, nobis velit reprehenderit magnam debitis quis facere alias doloremque nostrum mollitia commodi soluta illum ad doloribus! Nostrum, blanditiis odio. Fugit placeat velit architecto vero eius eligendi maiores soluta tempora maxime? Fuga quam assumenda, quos consectetur totam in corporis maxime odit ab quis dolore error, eligendi, debitis officiis. Ad, nisi eligendi! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat corrupti eligendi voluptas fugit neque sunt dignissimos ad est, repudiandae voluptatibus consequatur saepe earum, architecto distinctio? Expedita accusamus at repellat aliquam dicta pariatur labore ut reprehenderit qui delectus veniam aut sequi in ex dolore laboriosam, explicabo quidem distinctio similique, praesentium nihil! Dignissimos dolore facilis vel praesentium hic odit aperiam eaque nesciunt obcaecati tenetur quidem quasi laborum beatae totam doloremque eveniet eos, molestiae quibusdam quia! Possimus dolor culpa consequatur quos mollitia quo voluptatum totam facilis adipisci molestias nam voluptatibus optio alias, qui porro sed error odio nostrum odit hic ad neque! Unde.
-        <a href="#" data-bs-toggle="collapse" data-bs-target="#read-more">Read more</a>
+        <a href="#" data-bs-toggle="collapse" data-bs-target="#read-more">Read&nbsp;more</a>
         <div id="read-more" class="collapse">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quasi nostrum repudiandae doloribus pariatur velit, suscipit officiis illo praesentium iure, quas tempore repellendus optio sunt autem non ipsam? Laboriosam at magnam blanditiis eius. Vero assumenda, iste blanditiis quis repellendus officia aspernatur cumque corrupti sapiente, ipsam obcaecati doloremque dignissimos, est provident animi tempore suscipit molestiae voluptate. Fugiat ex minus rem tempora perspiciatis at alias ducimus, aspernatur inventore delectus distinctio repellendus libero hic. Incidunt dolorem cumque expedita mollitia delectus dignissimos deleniti sapiente cupiditate officia, ea omnis excepturi ex in labore nesciunt a voluptatem, ipsum quibusdam asperiores atque? Ipsum dolores eveniet natus est?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, culpa consequuntur nostrum sequi quia cupiditate fuga sint id voluptas? Laudantium, impedit, aut ea ab saepe corrupti nemo ducimus quidem voluptatibus, sint harum quam eveniet temporibus eos dolor debitis officiis! Pariatur facere incidunt qui. Provident aliquid similique labore illum dolore id itaque aspernatur ratione dicta harum! Sit perferendis deleniti amet maiores dolorem recusandae rem dolor neque, quo perspiciatis repellat exercitationem, animi temporibus eius nemo sequi non accusantium quidem eum in facere. Et, sequi maxime. Ducimus omnis debitis, harum beatae sunt atque corporis ullam blanditiis praesentium at placeat doloremque provident odit nulla.
         </div>
@@ -231,7 +230,7 @@
                 <div class="feedback p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit harum minima itaque asperiores. Sequi, maiores.
                 </div>
-                <img src="/resources/user-1.jpg" class="img-fluid rounded-circle" style="width: 100px;">
+                <img src="/resources/user-1.jpg"alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
                 <p>Alec Benjamin</p>
             </div>
             <div class="col-md-4 col-sm-12 text-center">
@@ -239,7 +238,7 @@
                 <div class="feedback p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit harum minima itaque asperiores. Sequi, maiores.
                 </div>
-                <img src="/resources/user-2.jpg" class="img-fluid rounded-circle" style="width: 100px;">
+                <img src="/resources/user-2.jpg" alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
                 <p>Alex Di Costa</p>
             </div>
             <div class="col-md-4 col-sm-12 text-center">
@@ -247,7 +246,7 @@
                 <div class="feedback p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit harum minima itaque asperiores. Sequi, maiores.
                 </div>
-                <img src="/resources/user-3.jpg" class="img-fluid rounded-circle" style="width: 100px;">
+                <img src="/resources/user-3.jpg" alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
                 <p>Joseph Brandon</p>
             </div>
         </div>
