--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="row p-lg-5 p-sm-0 mb-0">
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-1.jpg"alt="Please wait image is loading">
+                    <img class="card-img-top mx-auto" src="resources/plant-1.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Birdnest Japanese</h4>
@@ -150,7 +150,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-2.jpg"alt="Please wait image is loading">
+                    <img class="card-img-top mx-auto" src="resources/plant-2.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Monstera Deliciosa</h4>
@@ -161,7 +161,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-3.jpg"alt="Please wait image is loading">
+                    <img class="card-img-top mx-auto" src="resources/plant-3.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                       <h4 class="card-title">Hoya Obovatum</h4>
@@ -174,7 +174,7 @@
         <div class="row p-lg-5 p-sm-0 mt-0">
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-4.jpg"alt="Please wait image is loading">
+                    <img class="card-img-top mx-auto" src="resources/plant-4.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                       <h4 class="card-title">Zz plants</h4>
@@ -185,7 +185,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-5.jpg"alt="Please wait image is loading">
+                    <img class="card-img-top mx-auto" src="resources/plant-5.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Birds 0f Paradise</h4>
@@ -196,7 +196,7 @@
             </div>
             <div class="col-md-4 my-2 m-lg-0">
                 <div class="card text-center">
-                    <img class="card-img-top mx-auto" src="/resources/plant-6.jpg"alt="Please wait image is loading">
+                    <img class="card-img-top mx-auto" src="resources/plant-6.jpg"alt="Please wait image is loading">
                     <div class="card-body">
                         <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
                       <h4 class="card-title">Carathea Beauty Star</h4>
@@ -230,7 +230,7 @@
                 <div class="feedback p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit harum minima itaque asperiores. Sequi, maiores.
                 </div>
-                <img src="/resources/user-1.jpg"alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
+                <img src="resources/user-1.jpg"alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
                 <p>Alec Benjamin</p>
             </div>
             <div class="col-md-4 col-sm-12 text-center">
@@ -238,7 +238,7 @@
                 <div class="feedback p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit harum minima itaque asperiores. Sequi, maiores.
                 </div>
-                <img src="/resources/user-2.jpg" alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
+                <img src="resources/user-2.jpg" alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
                 <p>Alex Di Costa</p>
             </div>
             <div class="col-md-4 col-sm-12 text-center">
@@ -246,7 +246,7 @@
                 <div class="feedback p-2" style="font-family: Georgia, 'Times New Roman', Times, serif;"">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit harum minima itaque asperiores. Sequi, maiores.
                 </div>
-                <img src="/resources/user-3.jpg" alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
+                <img src="resources/user-3.jpg" alt="Please wait image is loading" class="img-fluid rounded-circle" style="width: 100px;">
                 <p>Joseph Brandon</p>
             </div>
         </div>
